style/window_stopwatch.css
.collapsedStopwatch,.expandedStopwatch{
    position: fixed;
    width: 20vw;
    height: 15vh;
    right: 0;
    top: 0;
    background-color:rgba(211,211,211,0.8);
    z-index: 1000000;
    color:black;
    font-size: 12pt;
    line-height: 1.2;
    box-sizing: border-box;
    vertical-align: middle;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    border: 0; 
    margin: 0; 
    padding: 0;
}

.expandedStopwatch span, .collapsedStopwatch span{
    border: 0; 
    margin: 0; 
    padding: 0;
    vertical-align: middle;
    visibility: visible;
}



.collapsedStopwatch{
    height: 9vh;
    width: 14vw;
}

 .collapsedStopwatch b{
    display: none;
 }

.stopwatchDrag{
    position: absolute;
    text-align:center; 
    bottom: 0; 
    border: 1.5pt;
    border-style: solid;
    border-color: rgba(150, 150, 150, 0.6);
    background-color: rgba(200, 200, 200, 1);
    box-sizing: border-box;
    width: 100%;
    z-index: 1000001;
}

.collapseClick{
    position: absolute;
    font-size: 10pt;
    top: 8pt;
    right: 5pt;
    text-align:center;
    box-sizing: border-box;
}

